# CppExamples

./: .gitignore  CMakeLists.txt  README.md
docs/: spdlog-Setup.docx
src/: main.cpp
